--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -53,7 +53,7 @@ dependencies:
   - numpydoc
   - pydata-sphinx-theme >=0.15.3
   - sphinx >=7.3
-  - sphinx-autoapi
+  - sphinx-autoapi >=3.0.0
   - sphinx-book-theme >=1.1.3
   - sphinx-click
   - sphinx-copybutton
