--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -55,6 +55,7 @@ dependencies:
   - sphinx >=7.3
   - sphinx-autoapi >=3.0.0
   - sphinx-book-theme >=1.1.3
+  - sphinx_changelog
   - sphinx-click
   - sphinx-copybutton
   - sphinx-design
