--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 prune .github
 prune .tox
+prune changelog
 prune docs
 prune requirements
 recursive-include requirements *.txt
@@ -14,6 +15,7 @@ exclude .pre-commit-config.yaml
 exclude .readthedocs.yml
 exclude .ruff.toml
 include *.md
+exclude CHANGELOG.rst
 include CITATION.cff
 exclude codecov.yml
 exclude tox.ini
