docs: populate changelog post 0.5.0 release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -320,7 +320,7 @@ name = "✨ New Features"
 showcontent = true
 
 [[tool.towncrier.type]]
-# New behaviours in existing features e.g., performance
+# Updates to existing behaviours, including performance etc
 directory = "enhancement"
 name = "🚀 Enhancements"
 showcontent = true
