--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -2,6 +2,7 @@ name: geovista-dev
 
 channels:
   - conda-forge
+  - nodefaults
 
 dependencies:
 
@@ -13,7 +14,7 @@ dependencies:
   - cartopy >=0.22
   - click
   - click-default-group
-  - lazy_loader
+  - lazy_loader >=0.4
   - numpy >=1.24
   - platformdirs
   - pooch
