--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,7 +3,7 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: mambaforge-22.9
+    python: mambaforge-23.11
   apt_packages:
     - libgl1-mesa-dev
     - xvfb
@@ -21,7 +21,7 @@ build:
       - geovista download --operational --decompress
 
 conda:
-  environment: requirements/locks/rtd.yml
+  environment: requirements/geovista.yml
 
 sphinx:
   configuration: docs/src/conf.py
