--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -57,6 +57,7 @@ dependencies:
   - sphinx-autoapi >=3.0.0
   - sphinx-book-theme >=1.1.3
   - sphinx_changelog
+  - towncrier <24.7.0
   - sphinx-click
   - sphinx-copybutton
   - sphinx-design
