docs: clarify unreleased whatsnew details

--- a/docs/src/reference/whatsnew/latest.rst.template
+++ b/docs/src/reference/whatsnew/latest.rst.template
@@ -7,13 +7,13 @@ This is a **major/minor** release of ``geovista``.
 
 See the :ref:`changelog <gv-changelog-latest>` for full release details, and the
 :fab:`github` `Discussion <https://github.com/bjlittle/geovista/discussions/>`__
-for further details.
+for further information.
 
 
 📢 Announcements
 ^^^^^^^^^^^^^^^^
 
-* N/A
+* ``TBD`` prior to release.
 
 
 💎 Highlights
@@ -21,7 +21,7 @@ for further details.
 
 Notable changes in this **major/minor** release of ``geovista`` include:
 
-* N/A
+* ``TBD`` prior to release.
 
 
 🚧 Patches
