--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -56,8 +56,8 @@ dependencies:
   - sphinx >=7.3
   - sphinx-autoapi >=3.2.0
   - sphinx-book-theme >=1.1.3
-  - sphinx_changelog
-  - towncrier <24.7.0
+  - sphinx_changelog >=1.6.0
+  - towncrier
   - sphinx-click
   - sphinx-copybutton
   - sphinx-design
