add missing ci concurrency

--- a/.github/workflows/ci-approve.yml
+++ b/.github/workflows/ci-approve.yml
@@ -6,6 +6,10 @@ name: ci-approve
 
 on: pull_request_target
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   auto-approve:
     name: "auto-approve"
