--- a/.github/workflows/ci-update-pr-branch.yml
+++ b/.github/workflows/ci-update-pr-branch.yml
@@ -8,6 +8,11 @@ on:
   push:
     branches:
       - "main"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   autoupdate:
     runs-on: ubuntu-latest
