--- a/.github/workflows/ci-label.yml
+++ b/.github/workflows/ci-label.yml
@@ -8,6 +8,10 @@ on:
   pull_request_target:
     types: [opened, edited, reopened]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   triage:
     runs-on: ubuntu-latest
