--- a/.github/workflows/ci-approve.yml
+++ b/.github/workflows/ci-approve.yml
@@ -22,13 +22,13 @@ jobs:
     if: github.actor == 'dependabot[bot]'
     steps:
       - name: "generate token"
-        uses: tibdex/github-app-token@v2
+        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a
         id: generate-token
         with:
           app_id: ${{ secrets.AUTH_APP_ID }}
           private_key: ${{ secrets.AUTH_APP_PRIVATE_KEY }}
 
-      - uses: hmarr/auto-approve-action@v4
+      - uses: hmarr/auto-approve-action@f0939ea97e9205ef24d872e76833fa908a770363
         with:
           github-token: ${{ steps.generate-token.outputs.token }}
           review-message: |
