--- a/.github/workflows/ci-citation.yml
+++ b/.github/workflows/ci-citation.yml
@@ -25,6 +25,6 @@ jobs:
           fetch-depth: 0
 
       - name: "check CITATION.cff"
-        uses: citation-file-format/cffconvert-github-action@2.0.0
+        uses: citation-file-format/cffconvert-github-action@4cf11baa70a673bfdf9dad0acc7ee33b3f4b6084
         with:
           args: "--validate"
