--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -56,7 +56,7 @@ jobs:
         env_name: ${{ env.ENV_NAME }}
 
     - name: "conda install"
-      uses: conda-incubator/setup-miniconda@v3
+      uses: conda-incubator/setup-miniconda@a4260408e20b96e80095f42ff7f1a15b27dd94ca
       with:
         miniforge-version: latest
         channels: conda-forge,defaults
@@ -110,7 +110,7 @@ jobs:
         merge-multiple: true
 
     - name: "generate token"
-      uses: tibdex/github-app-token@v2
+      uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a
       id: generate-token
       with:
         app_id: ${{ secrets.AUTH_APP_ID }}
