--- a/.github/workflows/ci-update-pr-branch.yml
+++ b/.github/workflows/ci-update-pr-branch.yml
@@ -18,14 +18,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "generate token"
-        uses: tibdex/github-app-token@v2
+        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a
         id: generate-token
         with:
           app_id: ${{ secrets.AUTH_APP_ID }}
           private_key: ${{ secrets.AUTH_APP_PRIVATE_KEY }}
 
       - name: "automatically update PR"
-        uses: adRise/update-pr-branch@v0.9.1
+        uses: adRise/update-pr-branch@3576c22e28fb6f665417bfe3a83f9da7ca5363e2
         with:
           token: ${{ steps.generate-token.outputs.token }}
           base: "main"
