fix ci-label and ci-changelog gha race condition

--- a/.github/workflows/ci-changelog.yml
+++ b/.github/workflows/ci-changelog.yml
@@ -37,6 +37,7 @@ jobs:
       run:
         shell: bash -l {0}
 
+    if: github.actor != 'pre-commit-ci[bot]'
     steps:
       - uses: actions/checkout@v4
         with:
