--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -44,7 +44,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest"]
-        version: ["py310", "py311", "py312"]
+        version: ["py311", "py312"]
         session: ["tests"]
         marker: ["image", "not image"]
         posargs: ["--xvfb-backend xvfb --durations=10"]
