drop tox usage within ci-locks gha

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,5 +20,5 @@ updates:
       - "bot"
       - "skip changelog"
     commit-message:
-      prefix: "ci: "
+      prefix: "chore: "
       include: "scope"
