--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -61,7 +61,6 @@ jobs:
       uses: conda-incubator/setup-miniconda@a4260408e20b96e80095f42ff7f1a15b27dd94ca
       with:
         miniforge-version: latest
-        python-version: ${{ env.PY_MAJOR }}.${{ env.PY_MINOR }}
         activate-environment: ${{ env.ENV_NAME }}
         use-only-tar-bz2: false
 
@@ -82,7 +81,7 @@ jobs:
         VTK_BUILD: "  - vtk=*=qt_*"
       working-directory: requirements/locks
       run: |
-        python -c 'from sys import version_info as v; open("../geovista.yml", "a").write(f"\n  - python ={v.major}.{v.minor}\n${{ env.VTK_BUILD }}\n")'
+        python -c 'open("../geovista.yml", "a").write("\n  - python =${{ env.PY_MAJOR }}.${{ env.PY_MINOR }}\n${{ env.VTK_BUILD }}\n")'
         conda-lock --mamba --channel conda-forge --kind explicit --file ../geovista.yml --platform linux-64 --filename-template "${{ matrix.version }}-lock-{platform}.txt"
         python lock2yaml.py ${{ matrix.version }}
 
