--- a/.github/workflows/ci-locks-test.yml
+++ b/.github/workflows/ci-locks-test.yml
@@ -1,7 +1,8 @@
 # Reference:
-#   - https://github.com/awalsh128/cache-apt-pkgs-action
 #   - https://github.com/actions/checkout
+#   - https://github.com/awalsh128/cache-apt-pkgs-action
 #   - https://github.com/conda-incubator/setup-miniconda
+#   - https://github.com/actions/upload-artifact
 
 name: ci-locks-test
 
@@ -54,6 +55,13 @@ jobs:
       run: |
         python -c 'open("geovista.yml", "a").write("\n  - python =${{ env.PY_MAJOR }}.${{ env.PY_MINOR }}\n${{ env.VTK_BUILD }}\n")'
         pipx run conda-lock --channel conda-forge --kind explicit --file geovista.yml --platform linux-64
+
+    - name: "upload lock artifact"
+      uses: actions/upload-artifact@v4
+      with:
+        name: lock-artifacts-${{ github.job }}-${{ strategy.job-index }}
+        path: |
+          ${{ github.workspace }}/requirements/conda-linux-64.lock
 
     - name: "conda install"
       uses: conda-incubator/setup-miniconda@a4260408e20b96e80095f42ff7f1a15b27dd94ca
