--- a/.github/workflows/ci-changelog.yml
+++ b/.github/workflows/ci-changelog.yml
@@ -29,6 +29,9 @@ jobs:
       run:
         shell: bash -l {0}
 
+    permissions:
+      pull-requests: read
+
     if: github.actor != 'pre-commit-ci[bot]'
     steps:
       - uses: actions/checkout@v4
