--- a/.github/workflows/ci-changelog.yml
+++ b/.github/workflows/ci-changelog.yml
@@ -30,8 +30,19 @@ jobs:
         shell: bash -l {0}
 
     permissions:
+      actions: read
+      attestations: none
+      checks: read
       contents: read
+      deployments: read
+      id-token: none
+      issues: read
+      packages: none
+      pages: none
       pull-requests: read
+      repository-projects: none
+      security-events: none
+      statuses: none
 
     if: github.actor != 'pre-commit-ci[bot]'
     steps:
