--- a/.github/workflows/ci-tests-pypi.yml
+++ b/.github/workflows/ci-tests-pypi.yml
@@ -6,10 +6,14 @@
 name: ci-tests-pypi
 
 on:
-  workflow_dispatch:
+  pull_request:
+
   schedule:
     # every day @ 00h03
     - cron: "3 0 * * *"
+
+  workflow_dispatch:
+
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
