--- a/.github/workflows/ci-tests-pypi.yml
+++ b/.github/workflows/ci-tests-pypi.yml
@@ -6,10 +6,14 @@
 name: ci-tests-pypi
 
 on:
-  workflow_dispatch:
+  pull_request:
+
   schedule:
     # every day @ 00h03
     - cron: "3 0 * * *"
+
+  workflow_dispatch:
+
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -52,7 +56,7 @@ jobs:
 
     - name: "pip install"
       run: |
-        pip install -e .[test,exam,cmap]
+        pip install --no-cache-dir -e .[test,exam,cmap]
 
     - name: "pip freeze"
       run: |
