--- a/.github/workflows/ci-tests-pypi.yml
+++ b/.github/workflows/ci-tests-pypi.yml
@@ -24,9 +24,10 @@ defaults:
     shell: bash -l {0}
 
 env:
+  ALLOW_PLOTTING: "true"
   CARTOPY_SHARE_DIR: ~/.local/share/cartopy
   GEOVISTA_POOCH_MUTE: true
-  ALLOW_PLOTTING: true
+  PY_COLORS: "1"
   SHELLOPTS: "errexit:pipefail"
 
 jobs:
