--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ requires =
     tox-run-command
 
 
-[testenv:py{311,312}-lock]
+[testenv:py{311,312,313}-lock]
 allowlist_externals =
     cp
 changedir =
@@ -38,10 +38,11 @@ commands =
     python lock2yaml.py {envname}
 
 
-[testenv:py{311,312}-env]
+[testenv:py{311,312,313}-env]
 conda_spec =
     py311: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
     py312: {toxinidir}{/}requirements{/}locks{/}py312-lock-linux-64.txt
+    py313: {toxinidir}{/}requirements{/}locks{/}py313-lock-linux-64.txt
 description =
     Create an environment only containing geovista dependencies.
 platform =
@@ -50,13 +51,14 @@ skip_install =
     true
 
 
-[testenv:py{311,312}-tests]
+[testenv:py{311,312,313}-tests]
 allowlist_externals =
     Xvfb
     mkdir
 conda_spec =
     py311: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
     py312: {toxinidir}{/}requirements{/}locks{/}py312-lock-linux-64.txt
+    py313: {toxinidir}{/}requirements{/}locks{/}py313-lock-linux-64.txt
 description =
     Perform geovista unit/integration tests.
 platform =
@@ -74,7 +76,7 @@ commands =
     pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images
 
 
-[testenv:py{311,312}-{linkcheck,doctest}]
+[testenv:py{311,312,313}-{linkcheck,doctest}]
 allowlist_externals =
     Xvfb
     make
@@ -83,6 +85,7 @@ changedir =
 conda_spec =
     py311: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
     py312: {toxinidir}{/}requirements{/}locks{/}py312-lock-linux-64.txt
+    py313: {toxinidir}{/}requirements{/}locks{/}py313-lock-linux-64.txt
 description =
     Build, test and link-check the geovista documentation.
 platform =
