--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,7 +114,7 @@ addopts = [
     "--doctest-continue-on-failure",
     "--doctest-modules",
     "--import-mode=importlib",
-    "-ra",
+    "-rfEs",
     "--strict-config",
     "--strict-markers",
     "-v",
