Add `taplo` pre-commit hook to format and sort `toml` files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -109,3 +109,10 @@ repos:
       - id: sp-repo-review
         additional_dependencies: ["repo-review[cli]"]
         args: ["--show=errskip"]
+
+  - repo: https://github.com/ComPWA/taplo-pre-commit
+    rev: v0.9.3
+    hooks:
+      - id: taplo-format
+        # See options: https://taplo.tamasfe.dev/configuration/formatter-options.html
+        args: [--option, "reorder_arrays=true", --option, "reorder_keys=true"]
