docs: migrate from x to bluesky icon

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -355,7 +355,7 @@ name = "💼 Internal"
 showcontent = true
 
 [[tool.towncrier.type]]
-# Celebrate our awesome community members.
+# Celebrate our awesome community members, including social changes.
 directory = "community"
 name = "🌱 Community"
 showcontent = true
