--- a/pyproject.toml
+++ b/pyproject.toml
@@ -224,6 +224,12 @@ max-complexity = 26
   # https://docs.astral.sh/ruff/rules/print/
   "T201", # flake8-print: print found.
 ]
+"conftest.py" = [
+  # flake8-annotations (ANN)
+  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
+  "ANN001", # Missing type annotation for function argument.
+  "ANN201", # Missing return type annotation for public function.
+]
 "src/geovista/cli.py" = [
   # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
   "FBT001", # flake8-boolean-trap: Boolean-typed positional argument in function definition.
@@ -245,6 +251,12 @@ max-complexity = 26
 "src/geovista/examples/spatial_index/uber_h3.py" = [
   # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
   "FBT001", # flake8-boolean-trap: Boolean-typed positional argument in function definition.
+]
+"test_*.py" = [
+  # flake8-annotations (ANN)
+  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
+  "ANN001", # Missing type annotation for function argument.
+  "ANN201", # Missing return type annotation for public funciton.
 ]
 
 
