--- a/pyproject.toml
+++ b/pyproject.toml
@@ -269,6 +269,8 @@ max-statements = 91
   # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
   "ANN001", # Missing type annotation for function argument.
   "ANN201", # Missing return type annotation for public funciton.
+  # https://docs.astral.sh/ruff/rules/#flake8-self-slf
+  "SLF001", # flake8-self: Private member accessed.
 ]
 # TODO @bjlittle: investigate behaviour of commented-out failing test
 "tests/core/test_slice_lines.py" = [
