--- a/.github/workflows/ci-tests-pypi.yml
+++ b/.github/workflows/ci-tests-pypi.yml
@@ -33,11 +33,12 @@ env:
 jobs:
   test-pypi:
     name: "test pypi (py${{ matrix.version }})"
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
+        os: ["ubuntu-22.04"]
         version: ["3.12"]
 
     steps:
