--- a/.github/workflows/ci-label.yml
+++ b/.github/workflows/ci-label.yml
@@ -65,10 +65,10 @@ jobs:
           labels: 'type: examples'
 
       - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
-        if: startsWith(github.event.pull_request.head.ref, 'nep') || startsWith(github.event.pull_request.head.ref, 'nep29')
+        if: startsWith(github.event.pull_request.head.ref, 'spec') || startsWith(github.event.pull_request.head.ref, 'spec0')
         with:
           github_token: ${{ github.token }}
-          labels: 'type: nep-29'
+          labels: 'type: spec-0'
 
       - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
         if: startsWith(github.event.pull_request.head.ref, 'perf') || startsWith(github.event.pull_request.head.ref, 'performance')
