docs: rationalise cross-references

--- a/docs/src/reference/whatsnew/latest.rst.template
+++ b/docs/src/reference/whatsnew/latest.rst.template
@@ -5,7 +5,7 @@
 
 This is a **major/minor** release of ``geovista``.
 
-See the :ref:`changelog <gv-changelog-latest>` for full release details, and the
+See the :ref:`changelog <gv-reference-changelog-latest>` for full release details, and the
 :fab:`github` `Discussion <https://github.com/bjlittle/geovista/discussions/>`__
 for further information.
 
