--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,15 @@ ignore-words-list = "whet,projets"
 skip = ".git,*.css,*.ipynb,*.js,*.html,*.map,*.po,CODE_OF_CONDUCT.md"
 
 
+[tool.mypy]
+strict = false
+ignore_missing_imports = true
+warn_unused_configs = true
+warn_unreachable = true
+enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
+exclude = []
+
+
 [tool.numpydoc_validation]
 checks = [
   "all", # Enable all numpydoc validation rules, apart from the following:
@@ -123,10 +132,6 @@ xfail_strict = "True"
 
 [tool.repo-review]
 ignore = [
-  # https://learn.scientific-python.org/development/guides/style/#MY100
-  "MY100", # Uses MyPy (pyproject config).
-  # https://learn.scientific-python.org/development/guides/style/#PC140
-  "PC140", # Uses mypy.
   # https://learn.scientific-python.org/development/guides/style/#PC180
   "PC180", # Uses prettier.
 ]
