--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -49,7 +49,7 @@ jobs:
         posargs: ["--xvfb-backend xvfb --durations=10"]
         include:
           - version: "py312"
-            coverage: "--cov-report= --cov=geovista"
+            coverage: "--cov-report= --cov=geovista --cov-branch"
 
     steps:
     - uses: actions/checkout@v4
