Address third-party MyPy problems.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,20 +59,23 @@ skip = ".git,*.css,*.ipynb,*.js,*.html,*.map,*.po,CODE_OF_CONDUCT.md"
 
 
 [tool.mypy]
-strict = true
-# TODO: fix pyvistaqt
-disallow_subclassing_any = false
-# TODO: fix click?
-disallow_untyped_decorators = false
 enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 exclude = []
 files = ["src/geovista"]
+strict = true
 warn_unreachable = true
-#
-#
-#[[tool.mypy.overrides]]
-#module = "click"
-#no_implicit_reexport = false
+
+
+[[tool.mypy.overrides]]
+# Problem caused by the click module - out of our control.
+disallow_untyped_decorators = false
+module = "geovista.cli"
+
+
+[[tool.mypy.overrides]]
+# Subclassing third-party classes - out of our control.
+disallow_subclassing_any = false
+module = "geovista.report,geovista.geoplotter,geovista.qt"
 
 
 [tool.numpydoc_validation]
