--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,13 @@ repos:
         types_or: [python, markdown, rst]
         additional_dependencies: [tomli]
 
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v1.14.1'
+    hooks:
+      - id: mypy
+        # https://github.com/python/mypy/issues/13916
+        pass_filenames: false
+
   - repo: https://github.com/numpy/numpydoc
     rev: v1.8.0
     hooks:
