--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ prune docs
 prune requirements
 recursive-include requirements *.txt
 recursive-include src *.md *.py *.pyi *.rst *.txt
+include src/geovista/py.typed
 prune tests
 
 include .git_archival.txt
