--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -104,6 +104,7 @@ jobs:
         miniforge-version: latest
         activate-environment: ${{ env.ENV_NAME }}
         use-only-tar-bz2: false
+        conda-remove-defaults: true
 
     - name: "conda environment cache"
       uses: ./.github/workflows/composite/conda-env-cache
